--- a/style/betterize.css
+++ b/style/betterize.css
@@ -23,14 +23,14 @@ html {
   line-height: 1.4;
   overflow-wrap: break-word;
   -moz-tab-size: 4;
-  tab-size: 4;
+       tab-size: 4;
   cursor: default;
   scroll-behavior: smooth;
   scrollbar-gutter: stable;
   -webkit-tap-highlight-color: transparent;
-  -moz-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
+          text-size-adjust: 100%;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -56,8 +56,8 @@ body {
   overflow-x: clip;
   margin: 0;
   background: $color-body-bg;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
 
@@ -99,10 +99,12 @@ dialog {
   position: absolute;
   right: 0;
   left: 0;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  width: -webkit-fit-content;
+  width:    -moz-fit-content;
+  width:         fit-content;
+  height: -webkit-fit-content;
+  height:    -moz-fit-content;
+  height:         fit-content;
   padding: 1em;
   border: solid;
   margin: auto;
@@ -211,6 +213,13 @@ textarea,
 a {
   cursor: pointer;
 }
+
+/*
+ * I remove the default underline for <a> links here. This is very opinionated.
+ * If you keep this here, you must ensure that you style your links so that they
+ * stand out properly from regular text. If you want to keep the default
+ * underline you can remove the following declaration of text-decoration: none;
+*/
 
 a,
 a:link,
