--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -182,6 +182,11 @@ textarea,
   -ms-touch-action: manipulation
   touch-action: manipulation
 
+// I remove the default underline for <a> links here. This is very opinionated.
+// If you keep this here, you must ensure that you style your links so that they
+// stand out properly from regular text. If you want to keep the default
+// underline you can remove the following declaration of text-decoration: none;
+
 a
   cursor: pointer
 
