--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -50,7 +50,7 @@ html
 body
   overflow-x: clip
   margin: 0
-  background: $color-body-bg
+  background: #f2f2f2
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   text-rendering: optimizeLegibility
