changed img default

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -136,19 +136,6 @@ sub
 sup
   top: -0.5em
 
-img
-  border-style: none
-  background-size: cover
-  background-repeat: no-repeat
-  font-style: italic
-  -ms-interpolation-mode: bicubic
-  shape-margin: 1rem
-
-img,
-picture,
-details
-  display: block
-
 textarea
   resize: vertical
 
@@ -227,8 +214,10 @@ hr
   border-top: 1px solid #ccc
   margin: 1em 0
 
-iframe
-  border: 0
+img,
+picture,
+details
+  display: block
 
 audio,
 canvas,
@@ -250,15 +239,18 @@ select,
 textarea,
 video
   max-width: 100%
-
-iframe,
-img,
-input,
-picture,
-select,
-textarea,
-video
   height: auto
+
+img
+  border-style: none
+  background-size: cover
+  background-repeat: no-repeat
+  image-rendering: smooth
+  font-style: italic
+  shape-margin: 1rem
+
+iframe
+  border: 0
 
 fieldset
   padding: 0
@@ -392,6 +384,6 @@ svg:not([fill])
 [aria-hidden='false'][hidden]
   display: initial
 
-[aria-hidden='false'][hidden]:not(:focus)
-  position: absolute
-  clip: rect(0, 0, 0, 0)
+  &:not(:focus)
+    position: absolute
+    clip: rect(0, 0, 0, 0)
