fixed the formatting of a comment

--- a/style/betterize.css
+++ b/style/betterize.css
@@ -391,8 +391,8 @@ address {
 }
 
 /*
-// 1 . Correct the inability to style clickable types in iOS and Safari.
-// 2. Change font properties to `inherit` in Safari.
+ * 1 . Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
 */
 
 ::-webkit-file-upload-button {
