--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -53,7 +53,10 @@ body
   background: #f2f2f2
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
-  text-rendering: optimizeLegibility
+  text-rendering: optimizeSpeed
+
+  @media screen and (min-width: 80em)
+    text-rendering: optimizeLegibility
 
 // TODO: Customize the selection background and color to match your design.
 
