--- a/style/betterize.css
+++ b/style/betterize.css
@@ -58,7 +58,13 @@ body {
   background: #f2f2f2;
   -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeSpeed;
+}
+
+@media screen and (min-width: 80em) {
+  body {
+    text-rendering: optimizeLegibility;
+  }
 }
 
 /* TODO: Customize the selection background and color to match your design. */
