--- a/style/betterize.less
+++ b/style/betterize.less
@@ -56,7 +56,11 @@ body {
   background: #f2f2f2;
   -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeSpeed;
+
+  @media screen and (min-width: 80em) {
+    text-rendering: optimizeLegibility;
+  }
 }
 
 // TODO: Customize the selection background and color to match your design.
