--- a/style/betterize.less
+++ b/style/betterize.less
@@ -54,12 +54,15 @@ body {
   overflow-x: clip;
   margin: 0;
   background: #f2f2f2;
-  -moz-osx-font-smoothing: grayscale;
-   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed;
 
   @media screen and (min-width: 80em) {
     text-rendering: optimizeLegibility;
+
+    @media (prefers-color-scheme: dark) {
+      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased;
+    }
   }
 }
 
