--- a/style/betterize.less
+++ b/style/betterize.less
@@ -88,14 +88,11 @@ body {
   margin: 0;
   background: #f2f2f2;
   text-rendering: optimizeSpeed;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 
   @media screen and (min-width: 80em) {
     text-rendering: optimizeLegibility;
-
-    @media (prefers-color-scheme: dark) {
-      -moz-osx-font-smoothing: grayscale;
-      -webkit-font-smoothing: antialiased;
-    }
   }
 }
 
@@ -241,9 +238,12 @@ hr {
   color: inherit;
 }
 
+canvas,
+details,
 img,
 picture,
-details {
+svg,
+video {
   display: block;
 }
 
@@ -258,10 +258,11 @@ video {
 }
 
 audio,
+canvas,
 embed,
 iframe,
-input,
 img,
+input,
 object,
 picture,
 select,
@@ -436,6 +437,19 @@ svg:not([fill]) {
     clip: rect(0, 0, 0, 0);
   }
 }
+
+///
+// This next rule is only needed if using a JS framework like React. You want
+// to select the top level element that your application is rendered within.
+// It ensures that high-priority elements are will show up above the others
+// and prevents stacking context bugs and z-index issues.
+///
+
+#root,
+#__next {
+  isolation: isolate;
+}
+
 
 ///
 /// #UTILITIES
