--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -380,7 +380,7 @@ svg:not([fill])
 ///
 // This next rule is only needed if using a JS framework like React. You want
 // to select the top level element that your application is rendered within.
-// It ensures that high-priority elements are will show up above the others
+// It ensures that high-priority elements will show up above the others
 // and prevents stacking context bugs and z-index issues.
 ///
 
