added p max width and text-balance: pretty, added scroll-behavior smooth for anchor links where the scroll is not attached to the html element

--- a/style/betterize.css
+++ b/style/betterize.css
@@ -25,7 +25,6 @@ html {
   -moz-tab-size: 4;
        tab-size: 4;
   cursor: default;
-  scroll-behavior: smooth;
   scrollbar-gutter: stable;
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
@@ -33,9 +32,13 @@ html {
           text-size-adjust: 100%;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-reduced-motion: no-preference) {
   html {
-    scroll-behavior: auto;
+    scroll-behavior: smooth;
+  }
+
+  :has(:target) {
+    scroll-behavior: smooth;
   }
 }
 
@@ -113,6 +116,17 @@ h6,
 blockquote {
   white-space: unset;
   text-wrap: balance;
+}
+
+p {
+  max-width: 95ch;
+}
+
+@supports (text-wrap: pretty) {
+  p {
+    white-space: unset;
+    text-wrap: pretty;
+  }
 }
 
 table {
