--- a/style/betterize.css
+++ b/style/betterize.css
@@ -26,7 +26,7 @@ html {
        tab-size: 4;
   cursor: default;
   scrollbar-gutter: stable;
-  hangiing-punctuation: first-last;
+  hanging-punctuation: first-last;
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
      -moz-text-size-adjust: 100%;
