color-scheme added to html element

--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -25,6 +25,7 @@ html {
   -moz-tab-size: 4;
        tab-size: 4;
   cursor: default;
+  color-scheme: light dark;
   scrollbar-gutter: stable;
   hanging-punctuation: first-last;
   -webkit-tap-highlight-color: transparent;
