--- a/style/betterize.css
+++ b/style/betterize.css
@@ -25,6 +25,7 @@ html {
   -moz-tab-size: 4;
        tab-size: 4;
   cursor: default;
+  color-scheme: light dark;
   scrollbar-gutter: stable;
   hanging-punctuation: first-last;
   -webkit-tap-highlight-color: transparent;
