min-height added to body

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -83,6 +83,8 @@ html
 
 body
   overflow-x: clip
+  min-height: 100vh
+  min-height: 100lvh
   margin: 0
   background: #f2f2f2
   text-rendering: optimizeSpeed
