--- a/style/betterize.css
+++ b/style/betterize.css
@@ -494,7 +494,7 @@ svg:not([fill]) {
 }
 
 /*
- * Hide only visually, but have it available for screen readers:
+ * Hide visually. Make it available for screen readers only:
  * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
 
