--- a/style/betterize.less
+++ b/style/betterize.less
@@ -482,7 +482,7 @@ svg:not([fill]) {
   display: none !important;
 }
 
-// Hide only visually, but have it available for screen readers:
+// Hide visually. Make it available for screen readers only:
 // https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 
 .sr-only,
