--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -415,7 +415,7 @@ svg:not([fill])
 [hidden]
   display: none !important
 
-// Hide only visually, but have it available for screen readers:
+// Hide visually. Make it available for screen readers only:
 // https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 
 .sr-only,
