fixed hanging punctuation value

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -27,7 +27,7 @@ html
   cursor: default
   color-scheme: light dark
   scrollbar-gutter: stable
-  hanging-punctuation: first-last
+  hanging-punctuation: first last
   -webkit-tap-highlight-color: transparent
   -webkit-text-size-adjust: 100%
   -moz-text-size-adjust: 100%
