--- a/style/betterize.less
+++ b/style/betterize.less
@@ -62,13 +62,13 @@ html {
 // TODO: Customize the selection background and color to match your design.
 
 ::-moz-selection {
-  background: #345171;
+  background: rgb(52 81 113);
   color: #fff;
   text-shadow: none;
 }
 
 ::selection {
-  background: #345171;
+  background: rgb(52 81 113);
   color: #fff;
   text-shadow: none;
 }
@@ -96,7 +96,7 @@ body {
   min-height: 100vh;
   min-height: 100lvh;
   margin: 0;
-  background: #f2f2f2;
+  background: rgb(242 242 242);
   text-rendering: optimizeSpeed;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -471,9 +471,8 @@ svg:not([fill]) {
 ///
 
 // Hide visually and from screen readers. It is recommended that you use the
-// HTML attribute [hidden] rather than the .hidden class for accessibility.
+// HTML attribute [hidden] rather than a .hidden class for accessibility.
 
-.hidden,
 [hidden] {
   display: none !important;
 }
@@ -538,6 +537,7 @@ svg:not([fill]) {
 
 .group {
   display: flow-root;
+  overflow: clip;
 }
 
 .anim-off {
