changed page-break-* to break-*

--- a/style/_print.sass
+++ b/style/_print.sass
@@ -41,7 +41,7 @@
   pre,
   blockquote
     border: 1px solid #999
-    page-break-inside: avoid
+    break-inside: avoid
 
   ///
   // Printing Tables:
@@ -53,7 +53,7 @@
 
   tr,
   img
-    page-break-inside: avoid
+    break-inside: avoid
 
   p,
   h2,
@@ -63,4 +63,4 @@
 
   h2,
   h3
-    page-break-after: avoid
+    break-after: avoid
