--- a/style/_print.scss
+++ b/style/_print.scss
@@ -47,7 +47,7 @@
   pre,
   blockquote {
     border: 1px solid #999;
-    page-break-inside: avoid;
+    break-inside: avoid;
   }
 
   ///
@@ -61,7 +61,7 @@
 
   tr,
   img {
-    page-break-inside: avoid;
+    break-inside: avoid;
   }
 
   p,
@@ -73,6 +73,6 @@
 
   h2,
   h3 {
-    page-break-after: avoid;
+    break-after: avoid;
   }
 }
