--- a/style/print.css
+++ b/style/print.css
@@ -48,7 +48,7 @@
   pre,
   blockquote {
     border: 1px solid #999;
-    page-break-inside: avoid;
+    break-inside: avoid;
   }
 
   /*
@@ -62,7 +62,7 @@
 
   tr,
   img {
-    page-break-inside: avoid;
+    break-inside: avoid;
   }
 
   p,
@@ -74,6 +74,6 @@
 
   h2,
   h3 {
-    page-break-after: avoid;
+    break-after: avoid;
   }
 }
