changed min-height of body from 100lvh to 100dvh

--- a/style/betterize.less
+++ b/style/betterize.less
@@ -94,7 +94,7 @@ html {
 body {
   overflow-x: clip;
   min-height: 100vh;
-  min-height: 100lvh;
+  min-height: 100dvh;
   margin: 0;
   background: rgb(242 242 242);
   text-rendering: optimizeSpeed;
