added specific h1 styling back into file

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -106,6 +106,16 @@ blockquote
   white-space: unset
   text-wrap: balance
 
+///
+/// Correct the font size and margin on <h1> elements within <section> and
+/// <article> contexts in Chrome, Firefox, and Safari.
+///
+
+h1
+  font-size: 2em
+  margin: 0.67em 0
+
+
 p
   max-width: 98ch;
   text-wrap: pretty;
