--- a/style/betterize.less
+++ b/style/betterize.less
@@ -119,6 +119,16 @@ blockquote {
   text-wrap: balance;
 }
 
+///
+/// Correct the font size and margin on <h1> elements within <section> and
+/// <article> contexts in Chrome, Firefox, and Safari.
+///
+
+h1 {
+  margin: 0.67em 0;
+  font-size: 2em;
+}
+
 p {
   max-width: 98ch;
   text-wrap: pretty;
