added hyphens: auto

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -24,6 +24,8 @@ html
   overflow-wrap: break-word
   -moz-tab-size: 4
   tab-size: 4
+  -webkit-hyphens: auto
+  hyphens: auto
   cursor: default
   color-scheme: light dark
   scrollbar-gutter: stable
