--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -23,15 +23,17 @@ html {
   line-height: 1.4;
   overflow-wrap: break-word;
   -moz-tab-size: 4;
-       tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: auto;
+  hyphens: auto;
   cursor: default;
   color-scheme: light dark;
   scrollbar-gutter: stable;
   hanging-punctuation: first last;
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
-     -moz-text-size-adjust: 100%;
-          text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -470,7 +472,6 @@ svg:not([fill]) {
   isolation: isolate;
 }
 
-
 ///
 /// #UTILITIES
 ///
@@ -498,7 +499,6 @@ svg:not([fill]) {
   margin: -1px;
   white-space: nowrap;
 }
-
 
 // Extends the .visually-hidden class to allow the element
 // to be focusable when navigated to via the keyboard:
