--- a/style/betterize.css
+++ b/style/betterize.css
@@ -23,7 +23,9 @@ html {
   line-height: 1.4;
   overflow-wrap: break-word;
   -moz-tab-size: 4;
-       tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: auto;
+  hyphens: auto;
   cursor: default;
   color-scheme: light dark;
   scrollbar-gutter: stable;
