changed max-width on p elements to max-inline-size and changed from 98ch to 95ch

--- a/style/betterize.css
+++ b/style/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css - Opinionated normalization for better cross-browser design - /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* @version 0.9.9 01/16/2024 ------------------------------------------------- /
+/* @version 0.9.9 02/27/2024 ------------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -135,7 +135,7 @@ h1 {
 }
 
 p {
-  max-width: 98ch;
+  max-inline-size: 95ch;
   text-wrap: pretty;
 }
 
