--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -2,7 +2,7 @@
 // -------------------------------------------------------------------------- //
 // betterize.scss - Opinionated normalization for better cross-browser design //
 // @author Stephen M Irving -- <@metric_dev> -------------------------------- //
-// @version 0.9.9 01/16/2024 ------------------------------------------------ //
+// @version 0.9.9 02/27/2024 ------------------------------------------------ //
 // -------------------------------------------------------------------------- //
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -131,7 +131,7 @@ h1 {
 }
 
 p {
-  max-width: 98ch;
+  max-inline-size: 95ch;
   text-wrap: pretty;
 }
 
