updated default color from #333 to #222, removed white-space: unset from h1-h6 and blockquote as it is not necessary as a default, removed unprefixed text-size-adjust from html.

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -9,7 +9,7 @@
 html
   overflow: hidden scroll
   box-sizing: border-box
-  color: #333
+  color: #222
   font-family:
     system-ui,
     -apple-system,
@@ -32,7 +32,6 @@ html
   hanging-punctuation: first last
   -webkit-tap-highlight-color: transparent
   -webkit-text-size-adjust: 100%
-  text-size-adjust: 100%
 
 @media (prefers-reduced-motion: no-preference)
   html
@@ -96,7 +95,7 @@ body
   @media screen and (min-width: 80em)
     text-rendering: optimizeLegibility
 
-// https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
+// See: https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
 
 h1,
 h2,
@@ -105,7 +104,6 @@ h4,
 h5,
 h6,
 blockquote
-  white-space: unset
   text-wrap: balance
 
 ///
